--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h1>Venkatraj Bachu</h1>
 
       <p>Software Development Engineer | Machine Learning Engineer</p>
-      <p id="bio">Hi! I'm a recent Computer Science graduate with a Master's degree,
+      <p id="bio">Hi! I'm a Computer Science graduate with a Master's degree,
         equipped with a strong foundation in software development and data
         science. Experienced in developing applications, implementing machine
         learning solutions seeking opportunities to leverage my expertise in a
